--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DOM Manipulation</title>
 </head>
 <body>
-    <h1>Manipulación del DOM- Curso Práctico de JavaScript</h1>
-    <p>Esto es un parrafo</p>
-    <p class="parrafito">Esto es un párrafo con clase</p>
-    <p id="pid">Esto es un parrafo con ID</p>
+    <h1>Manipulación del DOM básica</h1>
+    <form id="formCalc">
+        <input id="input1" placeholder="Escribe algo aquí"/>
+        <input id="input2" placeholder="Escribe algo aquí"/>
+        <button id="btnCalc">Calcular</button>
+        <p id="result"></p>
+    </form>
 
-    <input placeholder="Escribe algo aquí" value="ejemplo"/>
-
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
